[package]
name = "bevy_symbios"
version = "0.2.2"
edition = "2024"
authors = ["Janus"]
description = "Bevy integration for the Symbios L-System ecosystem."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios"
keywords = ["lsystem", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[features]
default = []
physics = ["dep:avian3d"]
egui = ["dep:bevy_egui"]

[dependencies]
bevy = "0.18"
symbios = "1.3"
symbios-turtle-3d = "0.3"
avian3d = { version = "0.5", optional = true }
bevy_egui = { version = "0.39", optional = true }

[dev-dependencies]
glam = "0.30"
avian3d = "0.5"
